compiler/internal/frontend/testdata/parser/positive/surfaces/async.tetra
async func worker() -> Int:
    return 42

func main() -> Int:
    return 0
