compiler/internal/frontend/testdata/parser/negative/optionals.tetra
func main() -> Int:
    match value:
    case some():
        return 0
